# CMakeLearnOpenGL

./: CMakeLists.txt  CMakeTest.cpp  CMakeTest.h
environment/glad/include/glad/: glad.h
environment/glad/src/: glad.c
environment/glm/gtx/: norm.hpp  quaternion.hpp
environment/learnopengl/: Actor.h  Camera.h  Data.h  Input.h  Scene.h  Shader.h
src/: Actor.h  Camera.h  Data.h  Shader.h
src/1.Start/: 1.1.Start.cpp  1.2.Start2.cpp  1.3.Start3.cpp  Shader1.fs  Shader1.vs  startShader.fs  startShader.vs
src/2.lighting/1.colors/: color.cpp
